--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,30 @@
 			<artifactId>cors-filter</artifactId>
 			<version>2.6</version>
 		</dependency>
+		<!-- Apache Http client -->
+        <dependency>  
+            <groupId>org.apache.httpcomponents</groupId>  
+            <artifactId>httpcore</artifactId>    
+            <version>4.4.1</version> 
+        </dependency>
+          <dependency>  
+            <groupId>org.apache.httpcomponents</groupId>  
+            <artifactId>httpclient</artifactId>  
+            <version>4.4.1</version>  
+        </dependency>
+
+        <dependency>  
+            <groupId>org.apache.httpcomponents</groupId>  
+            <artifactId>httpclient-cache</artifactId>  
+            <version>4.4.1</version>  
+        </dependency>  
+        <dependency>  
+            <groupId>org.apache.httpcomponents</groupId>  
+            <artifactId>httpmime</artifactId>  
+            <version>4.4.1</version>  
+        </dependency>
+        <!-- Apache Http client END-->
+		
 
 		<!-- Spring -->
 		<dependency>
